perf: evolves spring boot config